apps/management/headlamp/headlamp-IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-tls        # 建议格式：应用名-tls
  namespace: kube-system      # 应用所在的命名空间
spec:
  entryPoints:
    - websecure                          # 只走 443 端口，安全第一
  routes:
    - match: Host(`headlamp.k3s.besthomelab.tech`) # 替换你的二级域名
      kind: Rule
      services:
        - name: headlamp # K8s Service 的名字
          port: 80                        # K8s Service 监听的端口
  # --- 核心黑科技 ---
  tls: {} # 留空即代表：自动寻找 tlsStore 里的默认泛域名证书
